--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
         ]
     },
     "devDependencies": {
+        "body-parser": "^1.20.0",
+        "http-proxy-middleware": "^2.0.6",
         "mongodb": "^4.4.1",
         "nodemon": "^2.0.15"
     },
